[bdist_wheel]
universal=1

[metadata]
name = pygrin
version = 0.4.3
author = Scott Prahl
author_email = scott.prahl@oit.edu
license = MIT
description = Gradient Index (GRIN) Lens Calculations
url = https://github.com/scottprahl/pygrin.git

keywords =
    endoscope
    pitch
    SELFOC
    Graded Index

classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Physics
    Programming Language :: Python
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
packages = pygrin
install_requires = numpy; matplotlib
python_requires = >=3.4
zip_safe = True
setup_requires = setuptools>=44
