[metadata]
description = Gradient Index (GRIN) Lens Calculations

keywords =
    endoscope
    pitch
    SELFOC
    Graded Index

classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Physics
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages = pygrin
python_requires = >=3.8
setup_requires = setuptools>=44
install_requires = 
    numpy
    matplotlib

[flake8]
ignore = W503, D212, N802, N803, N806, E501
per-file-ignores = 
    __init__.py:F401,F403
    setup.py:D100
exclude =
    .git,
    __pycache__,
    docs
max-line-length = 99
docstring-convention = google
